# robot_setup_menagerie

./: README.md  upstream.repos
assembler/isaac_assembler/: package.xml  setup.cfg  setup.py
assembler/isaac_assembler/launch/: isaac_assembler.launch.py
assembler/isaac_assembler/scripts/: assemble_techtory_fr3.py  spawners.py
assembler/techtory_cobotta_description/: CMakeLists.txt  package.xml
assembler/techtory_cobotta_description/config/: ros2_controllers.yaml
assembler/techtory_cobotta_description/launch/: display.launch.py  (+1 more)
assembler/techtory_franka_description/: CMakeLists.txt  package.xml
assembler/techtory_franka_description/config/: ros2_controllers.yaml  view_robot.rviz
assembler/techtory_franka_description/launch/: display.launch.py  isaac.launch.py  sim.launch.py
assembler/techtory_franka_description/urdf/: techtory_franka.ros2_control.xacro  techtory_franka.urdf  techtory_franka.urdf.xacro
assembler/techtory_franka_description/urdf/techtory_fr3/: techtory_fr3.usd  techtory_fr3_camera.usd
assembler/techtory_franka_description/urdf/techtory_franka/: new.usd  techtory_franka.usd  techtory_franka.usda
assembler/techtory_franka_description/urdf/techtory_franka/payloads/: base.usda  materials.usda  robot.usda
assembler/techtory_franka_description/urdf/techtory_franka/payloads/Physics/: mujoco.usda  physics.usda  physx.usda
assembler/techtory_ur5e_description/: CMakeLists.txt  package.xml
moveit/techtory_franka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robots/cobotta_900_description/: CMakeLists.txt  package.xml
(+36 files in other folders)
